cluster/default/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    istio-injection: enabled
