cluster/default/nzbget.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: nzbget
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: nzbget
    helm.sh/chart: nzbget-3.1.1
  name: nzbget
  namespace: default
spec:
  loadBalancerIP: 10.20.50.156
  ports:
  - name: http
    port: 6789
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: nzbget
    app.kubernetes.io/name: nzbget
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: nzbget
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: nzbget
    helm.sh/chart: nzbget-3.1.1
  name: nzbget
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: nzbget
      app.kubernetes.io/name: nzbget
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: nzbget
        app.kubernetes.io/name: nzbget
    spec:
      containers:
      - env:
        - name: TZ
          value: America/New_York
        - name: PUID
          value: "1000"
        - name: PGID
          value: "1000"
        image: linuxserver/nzbget:v21.0-ls41
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 5
          initialDelaySeconds: 60
          tcpSocket:
            port: http
          timeoutSeconds: 10
        name: nzbget
        ports:
        - containerPort: 6789
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 5
          initialDelaySeconds: 60
          tcpSocket:
            port: http
          timeoutSeconds: 10
        resources:
          limits:
            memory: 400Mi
          requests:
            cpu: 25m
            memory: 300Mi
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /downloads
          name: downloads
          subPath: nzbget/downloads
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: nzbget-config
      - name: downloads
        persistentVolumeClaim:
          claimName: nfs-tank-share-pvc

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app.kubernetes.io/instance: nzbget
    app.kubernetes.io/managed-by: Tiller
    app.kubernetes.io/name: nzbget
    helm.sh/chart: nzbget-3.1.1
  name: nzbget
  namespace: default
spec:
  rules:
  - host: nzbget.holthome.net
    http:
      paths:
      - backend:
          serviceName: nzbget
          servicePort: http
        path: /
  tls:
  - hosts:
    - nzbget.holthome.net
    secretName: null
