cluster/default/plex.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kube-plex
    chart: kube-plex-0.2.7
    heritage: Tiller
    release: plex
  name: plex-kube-plex
  namespace: default
spec:
  loadBalancerIP: 10.20.50.155
  ports:
  - name: pms
    port: 32400
    protocol: TCP
    targetPort: pms
  - name: http
    port: 80
    targetPort: pms
  - name: https
    port: 443
    targetPort: 32443
  selector:
    app: kube-plex
    release: plex
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kube-plex
    chart: kube-plex-0.2.7
    heritage: Tiller
    release: plex
  name: plex-kube-plex
  namespace: default
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: kube-plex
      release: plex
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kube-plex
        release: plex
    spec:
      containers:
      - env:
        - name: TZ
          value: America/New_York
        - name: PLEX_CLAIM
          value: ""
        - name: PMS_INTERNAL_ADDRESS
          value: http://plex-kube-plex:32400
        - name: PMS_IMAGE
          value: plexinc/pms-docker:1.18.7.2457-77cb9455c
        - name: KUBE_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: TRANSCODE_PVC
          value: plex-kube-plex-transcode
        - name: DATA_PVC
          value: nfs-tank-share-pvc
        - name: CONFIG_PVC
          value: plex-kube-plex-config
        image: plexinc/pms-docker:1.18.7.2457-77cb9455c
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /identity
            port: 32400
          initialDelaySeconds: 10
          timeoutSeconds: 10
        name: plex
        ports:
        - containerPort: 32400
          name: pms
        - containerPort: 32400
          name: http
        - containerPort: 32443
          name: https
        readinessProbe:
          httpGet:
            path: /identity
            port: 32400
          initialDelaySeconds: 15
          timeoutSeconds: 5
        resources:
          limits:
            memory: 4900Mi
          requests:
            cpu: 35m
            memory: 1500Mi
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /config
          name: config
        - mountPath: /transcode
          name: transcode
        - mountPath: /shared
          name: shared
      hostname: plex-kube-plex
      nodeSelector:
        beta.kubernetes.io/arch: amd64
      serviceAccountName: plex-kube-plex
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: nfs-tank-share-pvc
      - name: config
        persistentVolumeClaim:
          claimName: plex-kube-plex-config
      - name: transcode
        persistentVolumeClaim:
          claimName: plex-kube-plex-transcode
      - emptyDir: {}
        name: shared

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: kube-plex
    chart: kube-plex-0.2.7
    heritage: Tiller
    release: plex
  name: plex-kube-plex
  namespace: default
spec:
  rules:
  - host: plex.holthome.net
    http:
      paths:
      - backend:
          serviceName: plex-kube-plex
          servicePort: pms
        path: /
  tls:
  - hosts:
    - plex.holthome.net
